public class Item {
    String name;

    Item(String name) {
        this.name = name;
    }
}
