@startuml hero

class Element {

}

class Creature {
    health
    
    takeDamage()
}

class Hero {

}

class Monster {

}

' Remove '
class Coin {

}

class Arena {
    width
    height
}

class Item {
    name
}

class Position {
    x
    y
}

class Weapon {
    damage
}

Element *-- Position
Element <-- Coin
Element <-- Creature

Creature <-- Hero
Creature <-- Monster

Arena *-- Hero
Arena *-- Monster

Item <-- Weapon

Hero o-- Item

@enduml